updated leaderboard now the you see leaderboard based on game mode and fixed align isues

--- a/assets/css/leaderboard.css
+++ b/assets/css/leaderboard.css
@@ -5,3 +5,11 @@ td, th {
 #tr-head > tbody:nth-child(1) > tr:nth-child(1) {
 	background-color: #f7f7f7;
 }
+
+#card {
+	width: 80em;
+}
+
+th {
+	width: 5em;
+}
